Sun Feb  6 11:48:01 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/webrick/mvm.rb: New file.  This makes WEBrick to run parallel.

	* sample/webrick/mvm.rb: Sample webrick application for it.

Sun Feb  6 11:25:36 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/socket/rubysocket.h (FMODE_NOREVLOOKUP): was an int, not a Fixnum.

Sun Feb  6 00:12:34 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/digest/digest.c (InitVM_digest): MVM ready.

	* ext/digest/bubblebabble/bubblebabble.c (InitVM_bubblebabble): ditto.

	* ext/digest/md5/md5init.c (InitVM_md5): ditto.

	* ext/digest/rmd160/rmd160init.c (InitVM_rmd160): ditto.

	* ext/digest/sha1/sha1init.c (InitVM_sha1): ditto

	* ext/digest/sha2/sha2init.c (InitVM_sha2): ditto

Sat Feb  5 23:54:58 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/strscan/strscan.c (InitVM_strscan): MVM ready.

Sat Feb  5 23:36:58 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* enc/trans/transdb.c (InitVM_transdb): MVM ready.

Sat Feb  5 23:32:54 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* enc/encdb.c (InitVM_encdb): MVM ready.

Sat Feb  5 22:44:29 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c: support for ruby floats; they are fairly flat, having
	  no pointers inside.  So a simple memory copy (rather than a
	  complex of Marshal.dump) should suffice with much sppedup.

Thu Feb  3 19:16:35 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (rb_intervm_wormhole_send): Sends unacceptable objects
	  anyway, by marshaling them.  Marshal output strings are
	  distinguishable by missued FL_MARK.

	* intervm.c (wormhole_sendable_p): Objects with instance variables
	  are hereby recognized as unacceptable; making them reroute via
	  marshaling.

	* intervm.c (wormhole_push): Fixing embarrassing in wormhole's
	  queue arrangement

	* intervm.c (wormhole_shift): ditto.

Tue Feb  1 15:31:46 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* README: update.
