@@ -1,3 +1,7 @@
+Sun Feb  6 12:17:14 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* lib/drb/mvm.rb : indent.
+
 Sun Feb  6 11:48:01 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* lib/webrick/mvm.rb: New file.  This makes WEBrick to run parallel.
